Fix Safari/Webkit spacing oddity

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -172,7 +172,7 @@ section{
 	}
 	.contact-this{
 		@include mza;
-		width: 203px;
+		width: 207px;
 		font-size: 40px;
 		a{
 			@include dib;
